[package]
name = "mpl-token-metadata"
version = "1.12.0"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[features]
no-entrypoint = []
test-bpf = []
serde-feature = ["serde", "serde_with"]

[dependencies]
num-derive = "0.3"
arrayref = "0.3.6"
num-traits = "0.2"
solana-program = "1.16.3"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
mpl-token-auth-rules = { git = "https://github.com/bridgesplit/mpl-token-auth-rules.git", features = ["no-entrypoint"] }
thiserror = "1.0"
borsh = "0.10.3"
shank = { version = "0.0.11" }
serde = { version = "1.0.149", optional = true }
serde_with = { version = "1.14.0", optional = true }
mpl-utils = { version = "0.2.0", path="../../core/rust/utils" }
mpl-token-metadata-context-derive = { version = "0.2.1", path = "../macro" }

[dev-dependencies]
rmp-serde = "1.1.1"
rooster = { git = "https://github.com/metaplex-foundation/rooster" }
solana-sdk = "1.16.3"
solana-program-test = "1.16.3"
serde = { version = "1.0.147", features = ["derive"]}
async-trait = "0.1.64"
old-token-metadata = { package = "mpl-token-metadata", version = "=1.10.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
